--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -21,51 +21,37 @@ body {
     transition: opacity 200ms ease-in-out;
 }
 
-.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+.fade-enter, .fade-leave-to {
     @apply .opacity-0;
 }
 
-.loader,
-.loader:after {
-    @apply .rounded-full .w-5 .h-5;
-}
+.checkbox-slider {
+    @apply .relative .bg-grey-light .border .overflow-hidden .rounded-full .outline-none .appearance-none .cursor-pointer;
 
-.loader {
-    @apply .text-base;
+    width: 36px;
+    height: 18px;
+    clip: rect(0,0,0,0);
+    transition: background 150ms ease;
 
-    position: relative;
-    text-indent: -9999rem;
-    border-top: 0.2rem solid rgba(255, 255, 255, 0.2);
-    border-right: 0.2rem solid rgba(255, 255, 255, 0.2);
-    border-bottom: 0.2rem solid rgba(255, 255, 255, 0.2);
-    border-left: 0.2rem solid #ffffff;
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-animation: loading 1.1s infinite linear;
-    animation: loading 1.1s infinite linear;
-}
-
-@-webkit-keyframes loading {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
+    &:focus,
+    &:active {
+        @apply .border-blue;
     }
 
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
+    &::after {
+        @apply .absolute .block .bg-white .rounded-full;
 
-@keyframes loading {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
+        content: '';
+        width: calc(100% / 2);
+        height: 100%;
+        transition: all 150ms ease;
     }
 
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
+    &:checked {
+        @apply .bg-blue .border-blue;
+
+        &::after {
+            transform: translateX(100%);
+        }
     }
 }
